Added conditional for zabbix api (skip on dev)
Signed-off-by: Fabian Arrotin <arrfab@centos.org>

--- a/tasks/monitoring.yml
+++ b/tasks/monitoring.yml
@@ -8,6 +8,7 @@
   delegate_to: "{{ zabbix_api_srv }}"  
   tags:
     - monitoring
+  when: zabbix_api_srv is defined
 
 - name: Distributing zabbix repospanner check file
   template:
