Fixed repospanner systemd unit, to be properly enabled at reboot
Signed-off-by: Fabian Arrotin <arrfab@centos.org>

--- a/files/repospanner@.service
+++ b/files/repospanner@.service
@@ -2,6 +2,10 @@
 Description=repoSpanner - instance %i
 After=network.target
 
+[Install]
+WantedBy=multi-user.target
+Alias=repospanner-instances.target
+
 [Service]
 EnvironmentFile=/etc/sysconfig/repospanner
 Type=simple
